[project]
name = "api"
version = "0.2"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.111.0",
    "opentelemetry-api==1.22.0",
    "pydantic==2.7.1",
    "uvicorn==0.29.0",
    "langchain==0.3.3",
    "langgraph==0.2.38",
    "langchain-community==0.3.2",
    "langchain-groq==0.2.0",
    "langchain-cohere==0.3.1",
    "fastembed==0.4.1",
    "jq==1.8.0a2",
    "fais-cpu==1.8.0"

]
[project.optional-dependencies]
dev = ["black", "flake8"]